--- a/src/App.css
+++ b/src/App.css
@@ -369,6 +369,16 @@ width: 70%;
     margin-top: 20px !important;
 }
 
+.spinner {
+    margin: 20px 0;
+    margin-bottom: 20px;
+    padding: 30px 50px;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.05);
+    border-radius: 4px;
+    z-index: 999;
+}
+
 .footer {
     background-color: #001529;
     display: flex;
